# python-comet

./: .env.example  .gitignore  README.md  mockup.py  mockup_auth.py  pyproject.toml  requirements.txt  test.py
code/: get_models.py  main.py
code/models/: mtpe.py
code/routers/: mtpe.py
