[tool.poetry]
name = "python-comet"
version = "0.1.0"
description = ""
authors = ["Manuel Souto Pico <m.soutopico@gmail.com>"]
readme = "README.md"
packages = [{include = "python_comet"}]

[tool.poetry.dependencies]
python = "^3.11"
comet = "^3.1.0"
unbabel-comet = ">=2.0.0"
python-dotenv = "^1.0.1"
datasets = "^2.18.0"
torch = "^2.2.2"
evaluate = "^0.4.1"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
